--- a/APP/templates/universe.kv
+++ b/APP/templates/universe.kv
@@ -256,7 +256,7 @@
 
                 canvas.before:
                     Color:
-                        rgba: 0.1, 0.1, 0.15, 0.9  # Panel más opaco
+                        rgba: 0.1, 0.1, 0.15, 0.9
                     RoundedRectangle:
                         pos: self.pos
                         size: self.size
@@ -343,11 +343,11 @@
         orientation: "vertical"
         canvas.before:
             Color:
-                rgba: 0.2, 0.1, 0.5, 0.8  # Fondo púrpura semi-transparente
+                rgba: 0.2, 0.1, 0.5, 0.8 
             Rectangle:
                 pos: self.pos
                 size: self.size
-                source: 'assets/images/Fondo.jpg'  # Mantén la imagen de fondo
+                source: 'assets/images/Fondo.jpg'
 
         AnchorLayout:
             anchor_x: 'center'
@@ -362,7 +362,7 @@
 
                 canvas.before:
                     Color:
-                        rgba: 0.1, 0.1, 0.15, 0.9  # Panel más opaco
+                        rgba: 0.1, 0.1, 0.15, 0.9
                     RoundedRectangle:
                         pos: self.pos
                         size: self.size
@@ -415,4 +415,3 @@
                     background_color: 0.5, 0.5, 0.5, 1
                     color: 1, 1, 1, 1
                     on_press: root.switch_root()
-
