--- a/FRONT/templates/crear_evento.html
+++ b/FRONT/templates/crear_evento.html
@@ -34,10 +34,10 @@
         <input type="url" id="imagen_url" name="imagen_url" required>
 
         <label for="entradas_totales">Entradas Totales:</label>
-        <input type="number" id="entradas_totales" name="entradas_totales" required>
+        <input type="number" id="entradas_totales" name="entradas_totales" min="1" required>
 
         <label for="entradas_disponibles">Entradas Disponibles:</label>
-        <input type="number" id="entradas_disponibles" name="entradas_disponibles" required>
+        <input type="number" id="entradas_disponibles" name="entradas_disponibles" min="1" required>
 
         <label for="fecha_hora">Fecha y Hora:</label>
         <input type="datetime-local" id="fecha_hora" name="fecha_hora" required>
@@ -46,7 +46,7 @@
         <input type="text" id="localizacion" name="localizacion" required>
 
         <label for="precio_entrada">Precio de Entrada:</label>
-        <input type="number" step="1" id="precio_entrada" name="precio_entrada" required>
+        <input type="number" step="1" id="precio_entrada" name="precio_entrada" min="0" required>
 
         <button type="submit">Crear Evento</button>
     </form>
