--- a/FRONT/static/css/login.css
+++ b/FRONT/static/css/login.css
@@ -7,8 +7,8 @@ main {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 1270px; 
-    height: 500px; 
+    width: 100%; 
+    height: 100%; 
     display: flex;
     align-items: center;
     justify-content: center;
