--- a/FRONT/templates/crear_evento.html
+++ b/FRONT/templates/crear_evento.html
@@ -50,6 +50,9 @@
 
         <button type="submit">Crear Evento</button>
     </form>
+    <div id="successMessage" class="success-message">
+        ¡Evento creado con Exito!
+    </div>
 </div>
 
 <script src="{{ url_for('static', filename='js/crear_evento.js') }}"></script>
