Arreglo error de sintaxis en la app mobile, cambio nombre de categoria "Conciertos" a "Musica"

--- a/APP/templates/universe.kv
+++ b/APP/templates/universe.kv
@@ -100,10 +100,10 @@
                         size_hint_y: 0.2
                         color: 0.8, 0.8, 0.8, 1
 
-            # Conciertos
+            # Musica
             Button:
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Conciertos')
+                on_press: root.access_category('Musica')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
