Arreglo errores en universe.kv

--- a/APP/templates/universe.kv
+++ b/APP/templates/universe.kv
@@ -219,7 +219,7 @@
             # Stand-Up
             Button:
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Stand-Up')
+                on_press: root.access_category('Stand Up')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
@@ -248,7 +248,7 @@
             # Cultura Japonesa
             Button:
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Cultura-Japonesa')
+                on_press: root.access_category('Cultura Japonesa')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
