Agrego que se tengan que logear antes de hacer una reserva con su respectivo mensaje

--- a/FRONT/templates/descripcion_evento.html
+++ b/FRONT/templates/descripcion_evento.html
@@ -7,6 +7,7 @@
 {% endif %}
 
 {% block content %}
+
 <link rel="stylesheet" href="{{ url_for('static', filename='/css/Descripcion_evento.css') }}">
 <div id="contenedor-principal">
     <dev id="banner">
@@ -16,14 +17,12 @@
     <div id="contenedor-secundario">
         <div id="parte-izquierda">
             <div class="texto-izquierda">
-
                 <h1>{{nombre_evento}}</h1>
                 <h2>Fecha y hora:</h2><p>{{fecha_hora}}</p>
                 <h2>Descripcion</h2><p>{{descripcion}}</p>
                 <h2>Cupos</h2><p>Totales: {{entradas_totales}}</p><p>Disponibles: {{entradas_disponibles}}</p>
                 <h2>Precio:</h2><p>${{precio_entrada}}</p>
-                <a id="enlace" href="{{ url_for('Pago' , id_evento_deseado = id_evento) }}">Comprar Entrada</a>
-
+                <a id="enlace" href="{{ url_for('verificar_sesion', id_evento_deseado=id_evento) }}">Comprar Entrada</a>
             </div>
         </div>
         <div id="parte-derecha">
