--- a/FRONT/templates/login.html
+++ b/FRONT/templates/login.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <div class="flash-messages">
+            {% for message in messages %}
+                <p class="alert">{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endwith %}
+
 <main class="login-main">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 <div class="contenedor-login">
