--- a/FRONT/static/css/login.css
+++ b/FRONT/static/css/login.css
@@ -98,3 +98,16 @@ main {
 .contenedor-login button[type="submit"]:hover {
     background-color: #3a006a;
 }
+
+.flash-messages {
+    margin: 20px;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.alert {
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: white;
+    color:black
+}
