--- a/FRONT/templates/musica.html
+++ b/FRONT/templates/musica.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-<link rel="stylesheet" href="{{ url_for('static', filename='/css/musica.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='/css/Descripcion_evento.css') }}">
 
 <div id="contenedor-principal">
     <dev id="banner">
