--- a/APP/templates/universe.kv
+++ b/APP/templates/universe.kv
@@ -73,8 +73,9 @@
 
             # Futbol
             Button:
+                id: futbol_button
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Futbol')
+                on_release: root.access_category('Futbol')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
@@ -102,8 +103,9 @@
 
             # Musica
             Button:
+                id: musica_button
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Musica')
+                on_release: root.access_category('Musica')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
@@ -131,8 +133,9 @@
 
             # Fiestas
             Button:
+                id: fiestas_button
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Fiestas')
+                on_release: root.access_category('Fiestas')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
@@ -160,8 +163,9 @@
 
             # Teatro
             Button:
+                id: teatro_button
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Teatro')
+                on_release: root.access_category('Teatro')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
@@ -189,8 +193,9 @@
 
             # eSports
             Button:
+                id: esports_button
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('eSports')
+                on_release: root.access_category('eSports')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
@@ -218,8 +223,9 @@
 
             # Stand-Up
             Button:
+                id: stand_up_button
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Stand Up')
+                on_release: root.access_category('Stand Up')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
@@ -247,8 +253,9 @@
 
             # Cultura Japonesa
             Button:
+                id: cultura_japonesa_button
                 background_color: 0, 0, 0, 0
-                on_press: root.access_category('Cultura Japonesa')
+                on_release: root.access_category('Cultura Japonesa')
                 BoxLayout:
                     orientation: "vertical"
                     pos: self.parent.pos
