--- a/FRONT/static/css/admin-styles.css
+++ b/FRONT/static/css/admin-styles.css
@@ -43,6 +43,19 @@ header {
     transform: scale(1.05);
 }
 
+.logo svg {
+    width: 70px; 
+    height: 70px;
+    fill: #faf9f8;
+    transition: transform 0.3s ease;
+}
+
+
+.logo:hover svg {
+    transform: scale(1.1);
+    fill: #efcef0; 
+}
+
 .barra-busqueda {
     width: 350px; 
     padding: 12px;
@@ -105,37 +118,10 @@ footer {
 .contacto, .creadores {
     text-align: center;
 }
-/* esta seria la otra opcion
-.creadores {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    gap: 40px; 
-}
-
-.columna-creadores{
-    display: flex;
-    flex-direction: column;
-    gap: 10px; 
-}
- */
 
 .contactos {
     display: flex;
     gap: 10px;
-}
-
-.logo svg {
-    width: 70px; 
-    height: 70px;
-    fill: #FBE5D8;
-    transition: transform 0.3s ease;
-}
-
-
-.logo:hover svg {
-    transform: scale(1.1);
-    fill: #FFDAB9; 
 }
 
 .st0 {
