--- a/FRONT/static/css/login.css
+++ b/FRONT/static/css/login.css
@@ -1,7 +1,3 @@
-/* main {
-    background-image: url(/15-universe/FRONT/static/img/fondo-login.jpg);
-} */
-
 main {
     background-image: url("/static/img/fondologin.jpg");
     background-size: cover;
@@ -14,6 +10,10 @@ main {
     justify-content: center;
     margin: 0 auto; 
     padding: 0;
+
+    display: grid;
+    place-items: center;
+    grid-template-rows: auto auto;
 }
 
 
@@ -22,7 +22,6 @@ main {
     margin: 0 auto;
     padding: 2em;
     background-color: #D9B2EC;
-    border: 1px solid #8400ff;
     border-radius: 10px;
     text-align: center;
 }
@@ -100,14 +99,15 @@ main {
 }
 
 .flash-messages {
-    margin: 20px;
-    padding: 15px;
-    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 20px; /* Ajusta el espacio entre el mensaje y el contenedor de login */
 }
 
 .alert {
+    display: inline-block;
+    color: rgb(207, 10, 10);
+    font-weight: bold;
+    background-color: #f8d7da;
     padding: 10px;
-    margin-bottom: 10px;
-    background-color: white;
-    color:black
+    border-radius: 5px;
 }
