--- a/FRONT/static/css/users-styles.css
+++ b/FRONT/static/css/users-styles.css
@@ -105,20 +105,6 @@ footer {
 .contacto, .creadores {
     text-align: center;
 }
-/* esta seria la otra opcion
-.creadores {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    gap: 40px; 
-}
-
-.columna-creadores{
-    display: flex;
-    flex-direction: column;
-    gap: 10px; 
-}
- */
 
 .contactos {
     display: flex;
@@ -128,14 +114,14 @@ footer {
 .logo svg {
     width: 70px; 
     height: 70px;
-    fill: #FBE5D8;
+    fill: #faf9f8;
     transition: transform 0.3s ease;
 }
 
 
 .logo:hover svg {
     transform: scale(1.1);
-    fill: #FFDAB9; 
+    fill: #efcef0; 
 }
 
 .st0 {
