--- a/FRONT/static/css/crear_evento.css
+++ b/FRONT/static/css/crear_evento.css
@@ -5,7 +5,6 @@
     grid-template-columns: 100%;
     text-align: center;
     margin: 0 auto;
-    padding: 2rem;
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -15,16 +14,15 @@ h2 {
     text-align: center;
     color: #333;
     font-family: 'Raleway', sans-serif;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
 label {
     font-weight: bold;
     color: #555;
-    margin-bottom: 0.5rem;
     display: block;
-    margin: 7px;
+    font-size: 0.9rem;
 }
 
 input[type="text"],
@@ -37,7 +35,7 @@ textarea {
     border: 1px solid #ddd;
     border-radius: 4px;
     font-family: 'Raleway', sans-serif;
-    font-size: 1rem;
+    font-size: 0.7rem;
     box-sizing: border-box;
 }
 
@@ -85,4 +83,12 @@ button[type="submit"]:hover {
     text-align: center;
     border-radius: 5px;
     display: none;
+}
+
+#imagen_url {
+    margin: 10px;
+}
+
+#fecha_hora {
+    margin: 10px;
 }
