Junto el engine con el config.py y arreglo el crear eventos

--- a/FRONT/templates/crear_evento.html
+++ b/FRONT/templates/crear_evento.html
@@ -18,13 +18,13 @@
 
         <label for="categoria">Categoria:</label>
         <select id="categoria" name="categoria" required>
-            <option value="Fiesta">Fiesta</option>
+            <option value="Fiestas">Fiesta</option>
             <option value="Teatro">Teatro</option>
             <option value="Esports">Esports</option>
             <option value="Futbol">Futbol</option>
-            <option value="Conciertos">Conciertos</option>
+            <option value="Musica">Conciertos</option>
             <option value="Cultura Japonesa">Cultura Japonesa</option>
-            <option value="Stand-Up">Stand-Up</option>
+            <option value="Stand Up">Stand-Up</option>
         </select>
 
         <label for="descripcion">Descripción:</label>
