--- a/APP/templates/universe.kv
+++ b/APP/templates/universe.kv
@@ -65,7 +65,7 @@
                 
             Button:
                 id: reserva_button
-                text: "Reserva"
+                text: "Consultar tu reserva"
                 size_hint_x: 0.15
                 background_color: 0.3, 0.2, 0.5, 1
                 on_release: root.switch_screen('Res')
@@ -83,7 +83,7 @@
 
             Button:
                 id: logout_button
-                text: "Logout"
+                text: "Cerrar sesion"
                 size_hint_x: 0.15
                 background_color: 0.3, 0.2, 0.5, 1
                 on_release: root.logout()
@@ -405,7 +405,7 @@
                     on_release: root.send_login(username.text, password.text)
 
                 Button:
-                    text: "Regresar"
+                    text: "Volver"
                     size_hint_y: None
                     height: "40dp"
                     background_color: 0.5, 0.5, 0.5, 1
@@ -569,7 +569,7 @@
                         size_hint_x: 0.5
                         background_color: 0.5, 0.5, 0.5, 1
                         on_release: root.go_back()
-                        
+
 <ReservaScreen>:
     Reserva:
 
@@ -604,7 +604,7 @@
                         radius: [15]
 
                 Label:
-                    text: "Consulta tu reserva"
+                    text: "Consultar tu reserva"
                     font_name: "Roboto"
                     font_size: 30
                     size_hint_y: None
@@ -618,7 +618,7 @@
                     height: "70dp"
 
                     Label:
-                        text: "ID de reserva:"
+                        text: "Numero de reserva:"
                         size_hint_y: None
                         height: "20dp"
                         color: 1, 1, 1, 1
@@ -636,7 +636,7 @@
                         padding: [10, 10]
 
                 Button:
-                    text: "Revisar"
+                    text: "Buscar reserva"
                     size_hint_y: None
                     height: "40dp"
                     background_color: 0.3, 0.2, 0.8, 1
@@ -644,7 +644,7 @@
                     on_release: root.check_reservation(idreserva.text) 
 
                 Button:
-                    text: "Eliminar Reserva"
+                    text: "Cancelar reserva"
                     size_hint_y: None
                     height: "40dp"
                     background_color: 0.3, 0.2, 0.8, 1
@@ -652,7 +652,7 @@
                     on_release: root.delete_reservation(idreserva.text)
 
                 Button:
-                    text: "Regresar"
+                    text: "Volver"
                     size_hint_y: None
                     height: "40dp"
                     background_color: 0.5, 0.5, 0.5, 1
